layout and icon bar

--- a/_affiliations/2012-bgi.md
+++ b/_affiliations/2012-bgi.md
@@ -1,5 +1,5 @@
 ---
 title: Fachgruppe Be-greifbare Interaktion
-url: https://be-greifbar.de
+link: https://be-greifbar.de
+description: I am part of the steering comitee of the German Tangible Interaction group inside of the Gesellschaft für Informatik e.V. (GI).
 ---
-I am part of the steering comitee of the German Tangible Interaction group inside of the Gesellschaft für Informatik e.V. (GI).
