--- a/_posts/2019-03-02-awards.md
+++ b/_posts/2019-03-02-awards.md
@@ -1,4 +1,8 @@
 ---
 title: Awards
-description: in 2012 I received etc.
+description: >-
+    in 2010 I received the Enno-Heidebroek-Urkunde for the best diploma in media computer science in the class of 2010. 
+    <p>In 2014 I received the nomination for the Georg-Helm-Preis, which is awarded by the Verein zur Förderung von Studierenden der TU Dresden e.V. by the Faculty of Computer Science of Technische Universität Dresden.</p>
+    <p>Also in 2014 my colleagues and I received the Best Paper Award for "Get Inspired; A Visual Divide And Conquer Approach For Motive-Based Search Scenarios" from International Conference on WWW/Internet 2014. </p>
+    <p>In 2017, our paper "Visualizing Uncertainty in Flow Diagrams; A Case Study in Product Costing" received the best paper award from The 10th International Symposium on Visual Information Communication and Interaction (VINCI 2017).</p>
 ---
