--- a/_posts/2019-05-02-projects.md
+++ b/_posts/2019-05-02-projects.md
@@ -3,5 +3,5 @@ title: Projects
 description: >-
     I worked in 8 research projects at Technische Universität Dresden, for instance, VANDA &ndash; Visual and Analytics Interfaces for Big Data Environments and DAMM &ndash; Digital Archive of Mathematical Models.
 
-    I also organized OUTPUT.DD, the project exhibition at the Faculty of Computer Science of Technische Universität Dresden in 20122 and two Inoovation Forums on Visual Engineering in 2011 and 2016.
+    <p>I also organized OUTPUT.DD, the project exhibition at the Faculty of Computer Science of Technische Universität Dresden in 20122 and two Inoovation Forums on Visual Engineering in 2011 and 2016.</p>
 ---
