--- a/_posts/2019-03-02-awards.md
+++ b/_posts/2019-03-02-awards.md
@@ -5,4 +5,5 @@ description: >-
     <p>In 2014 I received the nomination for the Georg-Helm-Preis, which is awarded by the Verein zur Förderung von Studierenden der TU Dresden e.V. by the Faculty of Computer Science of Technische Universität Dresden.</p>
     <p>Also in 2014 my colleagues and I received the Best Paper Award for "Get Inspired; A Visual Divide And Conquer Approach For Motive-Based Search Scenarios" from International Conference on WWW/Internet 2014. </p>
     <p>In 2017, our paper "Visualizing Uncertainty in Flow Diagrams; A Case Study in Product Costing" received the best paper award from The 10th International Symposium on Visual Information Communication and Interaction (VINCI 2017).</p>
+    <p>In 2019, our paper "Glyphboard&colon; Visual Exploration of High-dimensional Data Combining Glyphs with Dimensionality Reduction" received the best paper honorable mention from Visualization in Data Science (VDS at IEEE VIS 2019).</p>
 ---
