--- a/_affiliations/2012-bgi.md
+++ b/_affiliations/2012-bgi.md
@@ -1,5 +1,6 @@
 ---
 title: Fachgruppe Be-greifbare Interaktion
 link: http://be-greifbar.de
-description: I am part of the steering comitee of the German Tangible Interaction group inside of the Gesellschaft für Informatik e.V. (GI).
+status: active
+description: Member of the steering commitee of the German Tangible Interaction group inside of the Gesellschaft für Informatik e.V. (GI)
 ---
