minor responsive fixes

--- a/_awards/2019-vds.md
+++ b/_awards/2019-vds.md
@@ -1,5 +1,5 @@
 ---
-title: Best paper honorable mention
+title: Best Paper Honorable Mention
 year: 2019
 description: for "Glyphboard&colon; Visual Exploration of High-dimensional Data Combining Glyphs with Dimensionality Reduction"  from Visualization in Data Science (VDS at IEEE VIS 2019)
 ---
