fix typo and infos

--- a/_affiliations/2012-bgi.md
+++ b/_affiliations/2012-bgi.md
@@ -2,5 +2,5 @@
 title: Fachgruppe Be-greifbare Interaktion
 link: http://be-greifbar.de
 status: active
-description: Member of the steering commitee of the German Tangible Interaction group inside of the Gesellschaft für Informatik e.V. (GI)
+description: Member of the steering committee of the German Tangible Interaction group inside of the Gesellschaft für Informatik e.V. (GI)
 ---
